Name:           hctigar
Version:        0.1
Cabal-Version:  >= 1.2
Build-Type:     Simple
Data-Files:     include/assert.h
                include/pthread.h
                include/stdlib.h
                include/vvt.h

Executable vvt-pp
  Main-Is:              bin/Pretty.hs
  Build-Depends:        base,bytestring,atto-lisp,attoparsec<0.13,text,pretty
  GHC-Options:          -threaded

Executable vvt-bmc
  Extensions:           OverloadedStrings
  Main-Is:              bin/BMC.hs
  Build-Depends:        mtl,containers,constraints,data-fix,smtlib2,smtlib2-debug
  GHC-Options:          -threaded

Executable vvt-enc
  Main-Is:              bin/Encode.hs
  Build-Depends:        bindings-llvm,fgl,array,linear,vector,time,pqueue,smtlib2-emulated-modulus,smtlib2-timing,resource-pool
  GHC-Options:          -threaded

Executable vvt-verify
  Main-Is:              bin/Verify.hs
  GHC-Options:          -threaded

Executable vvt-predicates
  Main-Is:              bin/Predicates.hs

Executable vvt-opt
  Extensions:           ViewPatterns,GADTs
  Main-Is:              bin/Optimize.hs
  
Executable vvt
  Main-Is:              bin/Main.hs
  Build-Depends:        process,filepath,yaml
  GHC-Options:          -threaded

Executable vvt-svcomp
  Extensions:           ScopedTypeVariables,ViewPatterns
  Main-Is:              bin/SVComp.hs
  GHC-Options:          -threaded

Executable bench
  Main-Is:              bench/Main.hs
  Build-Depends:        turtle, yaml
  GHC-Options:          -Wall
