Name:           hctigar
Version:        0.1
Cabal-Version:  >= 1.2
Build-Type:     Simple

Executable hctigar
  Main-Is:              Main.hs
  Build-Depends:        base,vector,bindings-llvm,fgl,pqueue,containers,
                        smtlib2,smtlib2-debug,smtlib2-timing,
                        array,resource-pool,mtl,bytestring,attoparsec<0.11,atto-lisp,text,time,linear,data-fix
  GHC-Options:          -threaded -fwarn-unused-imports

Executable vvt-karr
  Main-Is:              bin/Karr.hs
  Build-Depends:        base,vector,smtlib2

Executable vvt-pp
  Main-Is:              bin/Pretty.hs
  Build-Depends:        atto-lisp,attoparsec<0.11,text,pretty

Executable vvt-bmc
  Main-Is:              bin/BMC.hs
  Build-Depends:        smtlib2