Name:           hctigar
Version:        0.1
Cabal-Version:  >= 1.2
Build-Type:     Simple
Data-Files:     include/assert.h
                include/pthread.h
                include/stdlib.h
                include/vvt.h

Flag Native-Z3
  Description: Bind to the Z3 C-API
  Default: False
Flag Native-MathSAT
  Description: Bind to the MathSAT C-API
  Default: False
                  
--Executable hctigar
--  Main-Is:              Main.hs
--  Build-Depends:        base,vector,bindings-llvm,fgl,pqueue,containers,
--                        smtlib2,smtlib2-debug,smtlib2-timing,smtlib2-emulated-modulus,
--                        array,resource-pool,mtl,bytestring,attoparsec<0.11,
--                        atto-lisp,text,time,linear,data-fix,constraints
--  GHC-Options:          -threaded -fwarn-unused-imports

--Executable vvt-karr
--  Main-Is:              bin/Karr.hs
--  Build-Depends:        base,vector,smtlib2

Executable vvt-enc
  Main-Is:              bin/Encode.hs
  Build-Depends:        bindings-llvm,fgl,array,linear,vector,time,pqueue,smtlib2-emulated-modulus,smtlib2-timing,resource-pool
  Extensions:           KindSignatures,RankNTypes,DataKinds,TypeFamilies,GADTs,QuasiQuotes,StandaloneDeriving,FlexibleContexts,TypeOperators,TypeSynonymInstances,MultiParamTypeClasses,FlexibleInstances,ScopedTypeVariables,PolyKinds,ViewPatterns,OverloadedStrings

Executable vvt-pp
  Main-Is:              bin/Pretty.hs
  Build-Depends:        base,bytestring,atto-lisp,attoparsec,text,pretty

Executable vvt-bmc
  Main-Is:              bin/BMC.hs
  Extensions:           TemplateHaskell,QuasiQuotes,DataKinds,GADTs,RankNTypes,TypeFamilies,FlexibleInstances,TypeOperators,PolyKinds,ViewPatterns,ScopedTypeVariables,OverloadedStrings,FlexibleContexts,StandaloneDeriving,MultiParamTypeClasses,ImpredicativeTypes,AllowAmbiguousTypes
  Build-Depends:        base,mtl,containers,constraints,data-fix,smtlib2,smtlib2-pipe,smtlib2-z3,smtlib2-debug,atto-lisp,bytestring,attoparsec,text,dependent-sum,dependent-map,transformers,time

Executable vvt-verify
  Main-Is:              bin/Verify.hs
  GHC-Options:          -threaded
  Build-Depends:        base, smtlib2 >= 0.3, smtlib2-debug, smtlib2-pipe, smtlib2-timing, smtlib2-emulated-modulus, containers, vector, pqueue, fgl, time, mtl,
                        dependent-sum, text, atto-lisp, constraints, bytestring, attoparsec, transformers, resource-pool, dependent-map
  if flag(Native-Z3)
    Build-Depends:      smtlib2-z3
    CPP-Options:        -DNATIVE_Z3
  if flag(Native-MathSAT)
    Build-Depends:      smtlib2-mathsat
    CPP-Options:        -DNATIVE_MATHSAT
  Extensions:           TemplateHaskell,QuasiQuotes,DataKinds,GADTs,RankNTypes,TypeFamilies,FlexibleInstances,TypeOperators,PolyKinds,ViewPatterns,ScopedTypeVariables,OverloadedStrings,FlexibleContexts,StandaloneDeriving,MultiParamTypeClasses,ImpredicativeTypes,CPP

Executable vvt-predicates
  Build-Depends:        base,containers,linear,fgl,smtlib2 >= 0.3, smtlib2-pipe, smtlib2-debug, dependent-map, atto-lisp, attoparsec, bytestring, transformers, mtl, text, dependent-sum, vector, constraints
  Extensions:           RankNTypes,KindSignatures,DataKinds,TypeFamilies,FlexibleContexts,MultiParamTypeClasses,QuasiQuotes,StandaloneDeriving,GADTs,TypeOperators,ScopedTypeVariables,PolyKinds,ViewPatterns,FlexibleInstances,OverloadedStrings,GeneralizedNewtypeDeriving
  Main-Is:              bin/Predicates.hs

Executable vvt-opt
  Build-Depends:        base,mtl,dependent-sum,dependent-map,bytestring,attoparsec,atto-lisp,transformers,containers,text,constraints,smtlib2 >= 0.3,smtlib2-pipe,smtlib2-debug
  Extensions:           RankNTypes,KindSignatures,DataKinds,TypeFamilies,FlexibleContexts,MultiParamTypeClasses,QuasiQuotes,StandaloneDeriving,GADTs,TypeOperators,ScopedTypeVariables,PolyKinds,ViewPatterns,FlexibleInstances,OverloadedStrings,GeneralizedNewtypeDeriving
  Main-Is:              bin/Optimize.hs
  
--executable vvt
--  Main-Is:              bin/Main.hs
--  Build-Depends:        process,filepath
--  GHC-Options:          -threaded
